# agentstr-sdk

./: .env.sample  .gitignore  README.md  generate-docs.sh  lint.sh  main.py  nostr.py  nwc_testing.py  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: agentstr.html  index.html  search.js
docs/agentstr/: nostr_agent_server.html  nostr_client.html  nostr_mcp_client.html  nostr_mcp_server.html  nostr_rag.html  nwc.html  nwc_client.html
docs/source/: agentstr.a2a.rst  agentstr.mcp.agno.rst  agentstr.mcp.dspy.rst  agentstr.mcp.google.rst  agentstr.mcp.langgraph.rst  agentstr.mcp.openai.rst  agentstr.mcp.pydantic.rst  agentstr.mcp.rst  agentstr.nostr_agent_server.rst  agentstr.nostr_client.rst  agentstr.nostr_mcp_client.rst  agentstr.nostr_mcp_server.rst  agentstr.nostr_rag.rst  agentstr.nwc.rst  agentstr.nwc_client.rst  agentstr.nwc_relay.rst  agentstr.relay.rst  agentstr.relay_manager.rst  agentstr.rst  agentstr.tools.agno.rst  agentstr.tools.dspy.rst  agentstr.tools.langgraph.rst  agentstr.tools.rst  conf.py  index.rst  modules.rst
examples/: .env.sample  agent_discovery.py  agent_server.py  agno_agent.py  chat_with_agents.py  discover_tools.py  dm_agents.py  dspy_agent.py  event_relay.py  langgraph_agent.py  mcp_client.py  mcp_server.py  nostr_agno_agent.py  nostr_dspy_agent.py  nostr_google_agent.py  nostr_langgraph_agent.py  nostr_openai_agent.py  nostr_pydantic_agent.py  rag.py  send_dm.py  tool_discovery.py
src/agentstr/: __init__.py  a2a.py  nostr_agent_server.py  nostr_client.py  relay.py  (+5 more)
tests/: .env.sample  test_nwc_relay.py  test_relay_manager.py
(+16 files in other folders)
