[project]
name = "nostr-agent-tools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pycryptodome==3.10.1",
    "pynostr[websocket-client]>=0.6.2",
    "python-dotenv>=1.1.0",
    "secp256k1>=0.14.0",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
